# sacm-0.3.8

./: .gitignore  README.md
client/: acghost.cpp  acghost.h  chatwindow.cpp  chatwindow.h  client.vcxproj  client.vcxproj.filters  cmdprocs.cpp  cmdwindow.cpp  cmdwindow.h  deathwindow.cpp  deathwindow.h  events.cpp  exceptbox.rc  exceptions.cpp  filechecks.cpp  filehooks.cpp  filesystem.cpp  fontrender.cpp  fontrender.h  helpdialog.cpp  helpdialog.h  httpclient.cpp  httpclient.h  label.cpp  label.h  main.cpp  main.h  mod.h  newplayertags.cpp  newplayertags.h  outputdebugstring.h  playertags.cpp  playertags.h  resource.h  scoreboard.cpp  scoreboard.h  spawnscreen.cpp  spawnscreen.h  subclass.cpp
raknet/: MessageIdentifiers.h  (+2 more)
server/: Makefile  Makefile.am  console.cpp  console.h  exceptions.cpp  filterscripts.cpp  filterscripts.h  format.cpp  format.h  gamemodes.cpp  gamemodes.h  gangzonepool.cpp  gangzonepool.h  httpclient.h  jenkinshash.h  main.cpp  main.h  menu.cpp  menu.h  menupool.cpp  menupool.h  netgame.cpp  netgame.h  netrpc.cpp  netrpc.h  object.cpp  object.h  objectpool.cpp  objectpool.h  pickuppool.cpp  pickuppool.h  player.cpp  player.h  playerpool.cpp  playerpool.h  plugincommon.h  plugininternal.h  pluginkey.h  plugins.cpp  plugins.h  (+16 more)
server/amx/: Makefile.am  amx.h  amxargs.c  amxcons.h  amxcore.c  amxpool.c  amxpool.h  amxprocess.c  amxstring.c  fixed.c  float.c  format.cpp  format.h  minGlue.h  minIni.c  minIni.h  scrtimers.cpp  scrtimers.h
server/linuxbuild/: AUTHORS  Makefile.am  NEWS  README  configure.ac
server/sqlite/: sqlite3.c  sqlite_amx.c
(+100 files in other folders)
